--- a/HTML_and_CSS/Lesson17/styles.css
+++ b/HTML_and_CSS/Lesson17/styles.css
@@ -1,3 +1,20 @@
 ﻿p {
-  font-family:Arial,Helvettica,Sans-serif;
+    font-family:Arial,Helvettica,Sans-serif;
+} 
+  
+@font-face {  
+    font-family: 'GoodDogRegular';
+    src: url('GoodDog-webfont.eot');
+    src: url('GoodDog-webfont.eot?#iefix') format('embedded-opentype'),
+    url('GoodDog-webfont.woff') format('woff'),
+    url('GoodDog-webfont.ttf') format('truetype'),
+    url('GoodDog-webfont.svg#GoodDogRegular') format('svg');
+  
+    font-weight: normal;
+    font-style: normal;
+}
+  
+  
+h1.heading {
+    font: 60px/68px 'GoodDogRegular', Arial, sans-serif;letter-spacing: 0;
 }
