--- a/Practice 1/css/styles.css
+++ b/Practice 1/css/styles.css
@@ -1,2 +1,85 @@
+body {
+  font-family:Bookman,Arial,Helvettica,sans-serif;
+  background-color: midnightblue;
+}
+
+header {
+  width:85%;
+  background-color: coral;
+  color:white;
+  margin-right:auto;
+  margin-left:auto;
+  padding:10px;
+  overflow:hidden;
+}
+
+h1 {
+  font-size:1.7em;
+  margin:0;
+  padding:0;
+  padding-top:10px;
+}
+
+h2 {
+  font-size:1.5;
+}
+
+h3 {
+  font-size:1.3;
+}
+
+hgroup {
+  width:70%;
+  float:left;
+}
+
+hgroup h1 {
+  padding-top:0;
+  line-height:1em;
+}
+
+hgroup h2 {
+  text-transform:lowercase;
+  font-size:1.2em;
+  line-height:1em;
+}
 
 
+nav {
+  width:30%;
+  float:right;
+}
+
+nav li {
+  float:left;
+  margin-right:5px;
+}
+
+nav ul {
+  list-style-type:none;
+}
+
+section {
+  width:85%;
+  background-color:white;
+  margin-right:auto;
+  margin-left:auto;
+  border-color:coral;
+  border-style:solid;
+  border-width:5px;
+  padding: 5px;
+}
+
+p {
+  margin:10px;
+}
+
+footer {
+  width:85%;
+  background-color:coral;
+  color:white;
+  margin-right:auto;
+  margin-left:auto;
+  height:50px;
+  padding:10px;
+}
