--- a/Practice 1/css/styles.css
+++ b/Practice 1/css/styles.css
@@ -30,7 +30,7 @@ h3 {
 
 hgroup {
   width:70%;
-  float:left;
+  justify-content: flex-start;
 }
 
 hgroup h1 {
@@ -46,8 +46,7 @@ hgroup h2 {
 
 
 nav {
-  width:30%;
-  float:right;
+  width:100%;
 }
 
 nav li {
@@ -57,6 +56,8 @@ nav li {
 
 nav ul {
   list-style-type:none;
+  display: flex;
+  justify-content: flex-end;
 }
 
 section {
