--- a/Week 4/ASP.NET MVC/Views/Test/MyView.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Test/MyView.cshtml
@@ -11,6 +11,14 @@
     <title>MyView</title>
 </head>
 <body>
-    Welcome to MVC learning!
+<div>
+    @{
+        ASP.NET_MVC.Models.Employee emp = (ASP.NET_MVC.Models.Employee)
+            ViewData["Employee"];
+    }
+    <b>Employee Details</b><br/>
+    Employee Name: @emp.FirstName@emp.LastName <br/>
+    Employee Salary: @emp.Salary.ToString("C")
+</div>
 </body>
 </html>
