--- a/Week 4/ASP.NET MVC/Views/Test/MyView.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Test/MyView.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Employee
 @{
     Layout = null;
 }
@@ -12,13 +12,20 @@
 </head>
 <body>
 <div>
-    @{
-        var emp = (Employee)
-            ViewBag.Employee;
-    }
     <b>Employee Details</b><br/>
-    Employee Name: @emp.FirstName @emp.LastName <br/>
-    Employee Salary: @emp.Salary.ToString("C")
+    Employee Name: @Model.FirstName @Model.LastName <br/>
+    @if (Model.Salary > 15000)
+    {
+        <span style="background-color: yellow">
+            Employee Salary: @Model.Salary.ToString("C")
+        </span>
+    }
+    else
+    {
+        <span style="background-color: green">
+            Employee Salary: @Model.Salary.ToString("C")
+        </span>
+    }
 </div>
 </body>
 </html>
