--- a/Week 4/ASP.NET MVC/Views/Test/MyView.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Test/MyView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model Facade.EmployeeViewModel
 @{
     Layout = null;
 }
@@ -11,21 +11,14 @@
     <title>MyView</title>
 </head>
 <body>
+    Hello @Model.UserName
+    <hr/>
 <div>
     <b>Employee Details</b><br/>
-    Employee Name: @Model.FirstName @Model.LastName <br/>
-    @if (Model.Salary > 15000)
-    {
-        <span style="background-color: yellow">
-            Employee Salary: @Model.Salary.ToString("C")
-        </span>
-    }
-    else
-    {
-        <span style="background-color: green">
-            Employee Salary: @Model.Salary.ToString("C")
-        </span>
-    }
+    Employee Name: @Model.EmployeeName <br/>
+    <span style="background-color: @Model.SalaryColor">
+        Employee Salary: @Model.Salary
+    </span>
 </div>
 </body>
 </html>
