--- a/Week 4/ASP.NET MVC/Views/_ViewImports.cshtml
+++ b/Week 4/ASP.NET MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using ASP.NET_MVC
-@using ASP.NET_MVC.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
