--- a/Week 4/ASP.NET MVC/Views/Employee/CreateEmployee.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Employee/CreateEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Facade.CreateEmployeeViewModel
 @{
     ViewBag.Title = "Create Employee";
     <script>
@@ -13,18 +13,27 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Create Employee</h2>
-<div>
-    <form action="/Employee/SaveEmployee" method="post">
-        <p>First Name: <input type="text" id="TxtFName" name="FirstName" value=""/>
-            @Html.ValidationMessage("FirstName")</p>
-        <p>Last Name: <input type="text" id="TxtLName" name="LastName" value=""/>
-            @Html.ValidationMessage("LastName")</p>
-        <p>Salary: <input type="text" id="TxtSalary" name="Salary" value=""/></p>
-        <input type="submit" name="BtnSubmit" value="Save Employee"/>
-        <input type="button" name="BtnReset" value="Reset" onclick="ResetForm()"/>
-        <input type="submit" name="BtnSubmit" value="Cancel"/>
-    </form>
-</div>
+    <h2>Create Employee</h2>
+    <div>
+        <form action="/Employee/SaveEmployee" method="post">
+            <p>
+                First Name: <input type="text" id="TxtFName" name="FirstName" value="" />
+                @Html.ValidationMessage("FirstName")
+            </p>
+            <p>
+                Last Name: <input type="text" id="TxtLName" name="LastName" value="" />
+                @Html.ValidationMessage("LastName")
+            </p>
+            <p>
+                Salary: <input type="text" id="TxtSalary" name="Salary" value="" />
+                @Html.ValidationMessage("Salary")
+            </p>
+            <td colspan="2">
+                <input type="submit" name="BtnSubmit" value="Save Employee" onclick="return IsValid();" />
+                <input type="submit" name="BtnSubmit" value="Cancel" />
+                <input type="button" name="BtnReset" value="Reset" onclick="ResetForm()" />
+            </td>
+        </form>
+    </div>
 </body>
 </html>
