--- a/Week 4/ASP.NET MVC/Views/Employee/CreateEmployee.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Employee/CreateEmployee.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Facade.CreateEmployeeViewModel
 @{
     ViewBag.Title = "Create Employee";
+    <script src="~/js/Validations.js"></script>
     <script>
         function ResetForm() {
             document.getElementById("TxtFName").value = "";
