--- a/Week 4/ASP.NET MVC/Views/Authentication/Login.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Authentication/Login.cshtml
@@ -3,12 +3,14 @@
     ViewBag.Title = "Login";
 }
 <h2>Login</h2>
+<body>
 <div>
     @Html.ValidationMessage("CredentialError", new { style = "color:red;" })
     @using (Html.BeginForm("DoLogin", "Authentication", FormMethod.Post))
     {
         @Html.LabelFor(c => c.UserName)
         @Html.TextBoxFor(x => x.UserName)
+        @Html.ValidationMessageFor(x => x.UserName)
         <br />
         @Html.LabelFor(c => c.Password)
         @Html.PasswordFor(x => x.Password)
@@ -16,3 +18,4 @@
         <input type="submit" name="BtnSubmit" value="Login" />
     }
 </div>
+</body>
