--- a/Week 4/ASP.NET MVC/Views/Employee/Index.cshtml
+++ b/Week 4/ASP.NET MVC/Views/Employee/Index.cshtml
@@ -13,23 +13,26 @@
         Hello, @Model.UserName
         <a href="/Authentication/Logout">Logout</a>
     </div>
-<div>
-    <p>
-        <a href="/Employee/AddNew">Add New</a>
-    </p>
-    <table class="table">
-        <tr>
-            <th>Employee Name</th>
-            <th>Salary</th>
-        </tr>
-        @foreach (var item in Model.Employees)
-        {
+    <div>
+        <p>
+            <a href="/Employee/AddNew">Add New</a>
+        </p>
+        <table class="table">
             <tr>
-                <td>@item.EmployeeName</td>
-                <td style="background-color: @item.SalaryColor">@item.Salary</td>
+                <th>Employee Name</th>
+                <th>Salary</th>
             </tr>
+            @foreach (var item in Model.Employees)
+            {
+                <tr>
+                    <td>@item.EmployeeName</td>
+                    <td style="background-color: @item.SalaryColor">@item.Salary</td>
+                </tr>
+            }
+        </table>
+        @{
+            Html.RenderPartial("Footer", Model.FooterData);
         }
-    </table>
-</div>
+    </div>
 </body>
 </html>
