Razor Pages 1.2.1 - Minor fix

--- a/Week 7/RazorPagesMovie/Pages/Movies/Create.cshtml
+++ b/Week 7/RazorPagesMovie/Pages/Movies/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorPagesMovie.Models.CreateModel
+@model RazorPagesMovie.Pages.Movies.CreateModel
 
 @{
     ViewData["Title"] = "Create";
