--- a/Week 7/RazorPagesMovie/Pages/Movies/Delete.cshtml
+++ b/Week 7/RazorPagesMovie/Pages/Movies/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorPagesMovie.Models.DeleteModel
+@model RazorPagesMovie.Pages.Movies.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
