--- a/Week 7/RazorPagesMovie/Pages/Movies/Edit.cshtml
+++ b/Week 7/RazorPagesMovie/Pages/Movies/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorPagesMovie.Models.EditModel
+@model RazorPagesMovie.Pages.Movies.EditModel
 
 @{
     ViewData["Title"] = "Edit";
