--- a/Week 7/RazorPagesMovie/Pages/Movies/Index.cshtml
+++ b/Week 7/RazorPagesMovie/Pages/Movies/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorPagesMovie.Models.IndexModel
+@model RazorPagesMovie.Pages.Movies.IndexModel
 
 @{
     ViewData["Title"] = "Index";
