--- a/Week 7/ContosoUniversity_2/Pages/Students/Create.cshtml
+++ b/Week 7/ContosoUniversity_2/Pages/Students/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity_2.Pages_Students.CreateModel
+@model ContosoUniversity_2.Pages.Students.CreateModel
 
 @{
     ViewData["Title"] = "Create";
