--- a/Week 7/ContosoUniversity_2/Pages/Students/Edit.cshtml
+++ b/Week 7/ContosoUniversity_2/Pages/Students/Edit.cshtml
@@ -1,5 +1,5 @@
-@page
-@model ContosoUniversity_2.Pages_Students.EditModel
+@page "{id:int}"
+@model ContosoUniversity_2.Pages.Students.EditModel
 
 @{
     ViewData["Title"] = "Edit";
