--- a/Week 7/ContosoUniversity_2/Pages/Students/Index.cshtml
+++ b/Week 7/ContosoUniversity_2/Pages/Students/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity_2.Pages_Students.IndexModel
+@model ContosoUniversity_2.Pages.Students.IndexModel
 
 @{
     ViewData["Title"] = "Index";
