--- a/Week 7/ContosoUniversity_2/Pages/Courses/Delete.cshtml
+++ b/Week 7/ContosoUniversity_2/Pages/Courses/Delete.cshtml
@@ -5,36 +5,42 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Course</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Course.CourseID)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Course.CourseID)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Course.Title)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Course.Title)
         </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.Course.Credits)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Course.Credits)
         </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.Course.Department)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Course.Department.DepartmentID)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Course.CourseID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
