--- a/Week 7/ContosoUniversity_2/Pages/Courses/Edit.cshtml
+++ b/Week 7/ContosoUniversity_2/Pages/Courses/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h2>Edit</h2>
 
 <h4>Course</h4>
 <hr />
@@ -14,6 +14,10 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Course.CourseID" />
+            <div class="form-group">
+                <label asp-for="Course.CourseID" class="control-label"></label>
+                <div>@Html.DisplayFor(model => model.Course.CourseID)</div>
+            </div>
             <div class="form-group">
                 <label asp-for="Course.Title" class="control-label"></label>
                 <input asp-for="Course.Title" class="form-control" />
@@ -25,12 +29,13 @@
                 <span asp-validation-for="Course.Credits" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.DepartmentID" class="control-label"></label>
-                <select asp-for="Course.DepartmentID" class="form-control" asp-items="ViewBag.DepartmentID"></select>
+                <label asp-for="Course.Department" class="control-label"></label>
+                <select asp-for="Course.DepartmentID" class="form-control"
+                        asp-items="@Model.DepartmentNameSL"></select>
                 <span asp-validation-for="Course.DepartmentID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
